objects/Interview__c.object
<CustomObject>
    <fields>
        <fullName>Candidate_Id__c</fullName>
        <label>Candidate Name</label>
        <referenceTo>Candidate__c</referenceTo>
        <relationshipLabel>Jobs</relationshipLabel>
        <relationshipName>Interviews</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Employee_Id__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Employee Name</label>
        <referenceTo>Employee__c</referenceTo>
        <relationshipLabel>Interviews</relationshipLabel>
        <relationshipName>Interviews</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Interview_Date__c</fullName>
        <label>Interview Date</label>
        <required>true</required>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Job_Id__c</fullName>
        <label>Job Title</label>
        <referenceTo>Job__c</referenceTo>
        <relationshipLabel>Interviews</relationshipLabel>
        <relationshipName>Candidate</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Location__c</fullName>
        <label>Location</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>Preliminary Test</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Final Interview</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Technical Interview</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Negotiation</fullName>
            </picklistValues>
        </picklist>
        <required>true</required>
        <type>Picklist</type>
    </fields>
    <label>Interview</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>Interview-{0000}</displayFormat>
        <label>Interview Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Interviews</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>